--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Simple ToDo List</h1>
+        <h1>Simple ToDo List New</h1>
         <input type="text" id="taskInput" placeholder="Enter a new task">
         <button onclick="addTask()">Add</button>
         <ul id="taskList"> 
